--- a/website/content/docs/templates/customization.mdx
+++ b/website/content/docs/templates/customization.mdx
@@ -109,9 +109,9 @@ These are checked after the new `templates/` folder structure.
 A minimal template needs the task details and completion signal:
 
 ```handlebars
-## Task: {{taskTitle}}
+## Task: \{\{taskTitle\}\}
 
-{{taskDescription}}
+\{\{taskDescription\}\}
 
 When finished, signal completion with:
 <promise>COMPLETE</promise>
@@ -119,25 +119,25 @@ When finished, signal completion with:
 
 ### Adding Conditional Sections
 
-Use `{{#if}}` blocks to include content only when data exists:
+Use `\{\{#if\}\}` blocks to include content only when data exists:
 
 ```handlebars
-## Task: {{taskTitle}}
+## Task: \{\{taskTitle\}\}
 
-{{#if taskDescription}}
+\{\{#if taskDescription\}\}
 ### Description
-{{taskDescription}}
-{{/if}}
+\{\{taskDescription\}\}
+\{\{/if\}\}
 
-{{#if acceptanceCriteria}}
+\{\{#if acceptanceCriteria\}\}
 ### Acceptance Criteria
-{{acceptanceCriteria}}
-{{/if}}
+\{\{acceptanceCriteria\}\}
+\{\{/if\}\}
 
-{{#if dependsOn}}
+\{\{#if dependsOn\}\}
 ### Prerequisites
-Complete these first: {{dependsOn}}
-{{/if}}
+Complete these first: \{\{dependsOn\}\}
+\{\{/if\}\}
 
 When finished, signal completion with:
 <promise>COMPLETE</promise>
@@ -149,18 +149,18 @@ Customize the instructions section for your workflow:
 
 ```handlebars
 ## User Story
-**ID**: {{taskId}}
-**Title**: {{taskTitle}}
+**ID**: \{\{taskId\}\}
+**Title**: \{\{taskTitle\}\}
 
-{{#if taskDescription}}
+\{\{#if taskDescription\}\}
 ## Description
-{{taskDescription}}
-{{/if}}
+\{\{taskDescription\}\}
+\{\{/if\}\}
 
-{{#if acceptanceCriteria}}
+\{\{#if acceptanceCriteria\}\}
 ## Acceptance Criteria
-{{acceptanceCriteria}}
-{{/if}}
+\{\{acceptanceCriteria\}\}
+\{\{/if\}\}
 
 ## Project-Specific Instructions
 
@@ -190,13 +190,13 @@ When finished, signal completion with:
 For simple, focused prompts:
 
 ```handlebars
-Task: {{taskTitle}}
-{{taskDescription}}
+Task: \{\{taskTitle\}\}
+\{\{taskDescription\}\}
 
-{{#if acceptanceCriteria}}
+\{\{#if acceptanceCriteria\}\}
 Requirements:
-{{acceptanceCriteria}}
-{{/if}}
+\{\{acceptanceCriteria\}\}
+\{\{/if\}\}
 
 Signal <promise>COMPLETE</promise> when done.
 ```
@@ -206,70 +206,70 @@ Signal <promise>COMPLETE</promise> when done.
 This example mirrors the actual built-in templates with all features:
 
 ```handlebars
-{{!-- PRD Context (agent studies this first for the bigger picture) --}}
-{{#if prdContent}}
+\{\{!-- PRD Context (agent studies this first for the bigger picture) --\}\}
+\{\{#if prdContent\}\}
 We are working in a project to implement the following Product Requirements Document (PRD):
 
-{{prdContent}}
+\{\{prdContent\}\}
 
 ---
-{{/if}}
+\{\{/if\}\}
 
-{{!-- Selection context for beads-bv tracker --}}
-{{#if selectionReason}}
+\{\{!-- Selection context for beads-bv tracker --\}\}
+\{\{#if selectionReason\}\}
 ## Why This Task Was Selected
-{{selectionReason}}
-{{/if}}
+\{\{selectionReason\}\}
+\{\{/if\}\}
 
-## Your Task: {{taskId}} - {{taskTitle}}
+## Your Task: \{\{taskId\}\} - \{\{taskTitle\}\}
 
-{{#if taskDescription}}
+\{\{#if taskDescription\}\}
 ### Description
-{{taskDescription}}
-{{/if}}
+\{\{taskDescription\}\}
+\{\{/if\}\}
 
-{{#if acceptanceCriteria}}
+\{\{#if acceptanceCriteria\}\}
 ### Acceptance Criteria
-{{acceptanceCriteria}}
-{{/if}}
+\{\{acceptanceCriteria\}\}
+\{\{/if\}\}
 
-{{#if notes}}
+\{\{#if notes\}\}
 ### Notes
-{{notes}}
-{{/if}}
+\{\{notes\}\}
+\{\{/if\}\}
 
-{{#if epicId}}
+\{\{#if epicId\}\}
 ### Epic Context
-- **Epic**: {{epicId}}{{#if epicTitle}} - {{epicTitle}}{{/if}}
-{{/if}}
+- **Epic**: \{\{epicId\}\}\{\{#if epicTitle\}\} - \{\{epicTitle\}\}\{\{/if\}\}
+\{\{/if\}\}
 
-{{#if dependsOn}}
-**Prerequisites**: {{dependsOn}}
-{{/if}}
+\{\{#if dependsOn\}\}
+**Prerequisites**: \{\{dependsOn\}\}
+\{\{/if\}\}
 
-{{#if blocks}}
-**Unblocks**: {{blocks}}
-{{/if}}
+\{\{#if blocks\}\}
+**Unblocks**: \{\{blocks\}\}
+\{\{/if\}\}
 
-{{#if recentProgress}}
+\{\{#if recentProgress\}\}
 ## Recent Progress
-{{recentProgress}}
-{{/if}}
+\{\{recentProgress\}\}
+\{\{/if\}\}
 
 ## Workflow
 1. Study the PRD context above to understand the bigger picture
 2. Study `.ralph-tui/progress.md` to understand overall status, implementation progress, and learnings including codebase patterns and gotchas
 3. Implement this task following acceptance criteria
 4. Run quality checks: typecheck, lint, etc.
-5. Commit with message: `feat: {{taskId}} - {{taskTitle}}`
-6. Close the task (for beads): `bd close {{taskId}} --db {{beadsDbPath}} --reason "..."`
+5. Commit with message: `feat: \{\{taskId\}\} - \{\{taskTitle\}\}`
+6. Close the task (for beads): `bd close \{\{taskId\}\} --db \{\{beadsDbPath\}\} --reason "..."`
 7. Document learnings (see below)
 8. Signal completion
 
 ## Before Completing
 APPEND to `.ralph-tui/progress.md`:
 ```
-## [Date] - {{taskId}}
+## [Date] - \{\{taskId\}\}
 - What was implemented
 - Files changed
 - **Learnings:**
@@ -296,34 +296,34 @@ This template includes **compound learning** - agents are instructed to study `.
 For UI development with browser verification:
 
 ```handlebars
-{{#if prdContent}}
+\{\{#if prdContent\}\}
 We are working in a project to implement the following PRD:
 
-{{prdContent}}
+\{\{prdContent\}\}
 
 ---
-{{/if}}
+\{\{/if\}\}
 
-## Frontend Task: {{taskId}} - {{taskTitle}}
+## Frontend Task: \{\{taskId\}\} - \{\{taskTitle\}\}
 
-{{#if taskDescription}}
+\{\{#if taskDescription\}\}
 ### Description
-{{taskDescription}}
-{{/if}}
+\{\{taskDescription\}\}
+\{\{/if\}\}
 
-{{#if acceptanceCriteria}}
+\{\{#if acceptanceCriteria\}\}
 ### Acceptance Criteria
-{{acceptanceCriteria}}
-{{/if}}
+\{\{acceptanceCriteria\}\}
+\{\{/if\}\}
 
-{{#if dependsOn}}
-**Prerequisites**: {{dependsOn}}
-{{/if}}
+\{\{#if dependsOn\}\}
+**Prerequisites**: \{\{dependsOn\}\}
+\{\{/if\}\}
 
-{{#if recentProgress}}
+\{\{#if recentProgress\}\}
 ## Recent Progress
-{{recentProgress}}
-{{/if}}
+\{\{recentProgress\}\}
+\{\{/if\}\}
 
 ## Workflow
 1. Study the PRD context above
@@ -366,34 +366,34 @@ When finished, signal completion with:
 For backend/API work:
 
 ```handlebars
-{{#if prdContent}}
+\{\{#if prdContent\}\}
 We are working in a project to implement the following PRD:
 
-{{prdContent}}
+\{\{prdContent\}\}
 
 ---
-{{/if}}
+\{\{/if\}\}
 
-## API Task: {{taskId}} - {{taskTitle}}
+## API Task: \{\{taskId\}\} - \{\{taskTitle\}\}
 
-{{#if taskDescription}}
+\{\{#if taskDescription\}\}
 ### Description
-{{taskDescription}}
-{{/if}}
+\{\{taskDescription\}\}
+\{\{/if\}\}
 
-{{#if acceptanceCriteria}}
+\{\{#if acceptanceCriteria\}\}
 ### Requirements
-{{acceptanceCriteria}}
-{{/if}}
+\{\{acceptanceCriteria\}\}
+\{\{/if\}\}
 
-{{#if dependsOn}}
-**Prerequisites**: {{dependsOn}}
-{{/if}}
+\{\{#if dependsOn\}\}
+**Prerequisites**: \{\{dependsOn\}\}
+\{\{/if\}\}
 
-{{#if recentProgress}}
+\{\{#if recentProgress\}\}
 ## Recent Progress
-{{recentProgress}}
-{{/if}}
+\{\{recentProgress\}\}
+\{\{/if\}\}
 
 ## Workflow
 1. Study the PRD context above
@@ -437,10 +437,10 @@ When finished, signal completion with:
 Ralph maintains a **progress file** (`.ralph-tui/progress.md`) that summarizes work completed across iterations. Use the `recentProgress` variable to include this summary in your prompts:
 
 ```handlebars
-{{#if recentProgress}}
+\{\{#if recentProgress\}\}
 ## Recent Progress
-{{recentProgress}}
-{{/if}}
+\{\{recentProgress\}\}
+\{\{/if\}\}
 ```
 
 ### Why Use recentProgress?
@@ -476,14 +476,14 @@ The progress file is managed by Ralph's engine. To customize what gets included:
 For advanced templates, you can access the raw task and config objects:
 
 ```handlebars
-{{!-- Access nested task metadata --}}
-{{#if task.metadata.customField}}
-Custom: {{task.metadata.customField}}
-{{/if}}
+\{\{!-- Access nested task metadata --\}\}
+\{\{#if task.metadata.customField\}\}
+Custom: \{\{task.metadata.customField\}\}
+\{\{/if\}\}
 
-{{!-- Access config values --}}
-Working directory: {{cwd}}
-Model: {{model}}
+\{\{!-- Access config values --\}\}
+Working directory: \{\{cwd\}\}
+Model: \{\{model\}\}
 ```
 
 <Callout type="warning">
@@ -509,14 +509,14 @@ ralph-tui run --prd ./prd.json --iterations 1 --headless
 Handlebars will error on invalid syntax. Common issues:
 
 ```handlebars
-{{!-- Wrong: unclosed block --}}
-{{#if condition}}
+\{\{!-- Wrong: unclosed block --\}\}
+\{\{#if condition\}\}
 Content here...
 
-{{!-- Correct: properly closed --}}
-{{#if condition}}
+\{\{!-- Correct: properly closed --\}\}
+\{\{#if condition\}\}
 Content here...
-{{/if}}
+\{\{/if\}\}
 ```
 
 ## Next Steps
