--- a/website/content/docs/templates/overview.mdx
+++ b/website/content/docs/templates/overview.mdx
@@ -8,7 +8,7 @@ description: Learn how Ralph TUI uses Handlebars templates to build prompts for 
 Prompt templates are [Handlebars](https://handlebarsjs.com) templates that transform task data into structured prompts for AI agents. When Ralph picks a task from your tracker, it uses a template to build the prompt that gets sent to Claude Code, OpenCode, or Factory Droid.
 
 <Callout type="info">
-Handlebars is a simple templating language that uses `{{variable}}` syntax for variable substitution and `{{#if condition}}...{{/if}}` for conditional blocks.
+Handlebars is a simple templating language that uses `\{\{variable\}\}` syntax for variable substitution and `\{\{#if condition\}\}...\{\{/if\}\}` for conditional blocks.
 </Callout>
 
 ## Why Templates Matter
@@ -74,43 +74,43 @@ Ralph includes optimized templates for each tracker type:
 The JSON tracker template provides full PRD context with progress tracking:
 
 ```handlebars
-{{!-- Full PRD for project context (agent studies this first) --}}
-{{#if prdContent}}
+\{\{!-- Full PRD for project context (agent studies this first) --\}\}
+\{\{#if prdContent\}\}
 We are working in a project to implement the following Product Requirements Document (PRD):
 
-{{prdContent}}
+\{\{prdContent\}\}
 
 ---
-{{/if}}
+\{\{/if\}\}
 
-{{!-- Task details --}}
-## Your Task: {{taskId}} - {{taskTitle}}
+\{\{!-- Task details --\}\}
+## Your Task: \{\{taskId\}\} - \{\{taskTitle\}\}
 
-{{#if taskDescription}}
+\{\{#if taskDescription\}\}
 ### Description
-{{taskDescription}}
-{{/if}}
+\{\{taskDescription\}\}
+\{\{/if\}\}
 
-{{#if acceptanceCriteria}}
+\{\{#if acceptanceCriteria\}\}
 ### Acceptance Criteria
-{{acceptanceCriteria}}
-{{/if}}
+\{\{acceptanceCriteria\}\}
+\{\{/if\}\}
 
-{{#if dependsOn}}
-**Prerequisites**: {{dependsOn}}
-{{/if}}
+\{\{#if dependsOn\}\}
+**Prerequisites**: \{\{dependsOn\}\}
+\{\{/if\}\}
 
-{{#if recentProgress}}
+\{\{#if recentProgress\}\}
 ## Recent Progress
-{{recentProgress}}
-{{/if}}
+\{\{recentProgress\}\}
+\{\{/if\}\}
 
 ## Workflow
 1. Study the PRD context above to understand the bigger picture
 2. Study `.ralph-tui/progress.md` to understand overall status, implementation progress, and learnings including codebase patterns and gotchas
 3. Implement this single story following acceptance criteria
 4. Run quality checks: typecheck, lint, etc.
-5. Commit with message: `feat: {{taskId}} - {{taskTitle}}`
+5. Commit with message: `feat: \{\{taskId\}\} - \{\{taskTitle\}\}`
 6. Document learnings in `.ralph-tui/progress.md`
 7. Signal completion
 
@@ -127,46 +127,46 @@ When finished, signal completion with:
 The Beads template includes epic context and the `bd` CLI for closing issues:
 
 ```handlebars
-{{!-- Full PRD for project context (if available) --}}
-{{#if prdContent}}
+\{\{!-- Full PRD for project context (if available) --\}\}
+\{\{#if prdContent\}\}
 We are working in a project to implement the following Product Requirements Document (PRD):
 
-{{prdContent}}
+\{\{prdContent\}\}
 
 ---
-{{/if}}
+\{\{/if\}\}
 
 ## Bead Details
-- **ID**: {{taskId}}
-- **Title**: {{taskTitle}}
-{{#if epicId}}
-- **Epic**: {{epicId}}{{#if epicTitle}} - {{epicTitle}}{{/if}}
-{{/if}}
-{{#if taskDescription}}
-- **Description**: {{taskDescription}}
-{{/if}}
+- **ID**: \{\{taskId\}\}
+- **Title**: \{\{taskTitle\}\}
+\{\{#if epicId\}\}
+- **Epic**: \{\{epicId\}\}\{\{#if epicTitle\}\} - \{\{epicTitle\}\}\{\{/if\}\}
+\{\{/if\}\}
+\{\{#if taskDescription\}\}
+- **Description**: \{\{taskDescription\}\}
+\{\{/if\}\}
 
-{{#if acceptanceCriteria}}
+\{\{#if acceptanceCriteria\}\}
 ## Acceptance Criteria
-{{acceptanceCriteria}}
-{{/if}}
+\{\{acceptanceCriteria\}\}
+\{\{/if\}\}
 
-{{#if dependsOn}}
-**Prerequisites**: {{dependsOn}}
-{{/if}}
+\{\{#if dependsOn\}\}
+**Prerequisites**: \{\{dependsOn\}\}
+\{\{/if\}\}
 
-{{#if recentProgress}}
+\{\{#if recentProgress\}\}
 ## Recent Progress
-{{recentProgress}}
-{{/if}}
+\{\{recentProgress\}\}
+\{\{/if\}\}
 
 ## Workflow
 1. Study the PRD context above (if available)
 2. Study `.ralph-tui/progress.md` to understand overall status, implementation progress, and learnings including codebase patterns and gotchas
 3. Implement the requirements (stay on current branch)
 4. Run your project's quality checks
-5. Commit: `feat: {{taskId}} - {{taskTitle}}`
-6. Close the bead: `bd close {{taskId}} --db {{beadsDbPath}} --reason "..."`
+5. Commit: `feat: \{\{taskId\}\} - \{\{taskTitle\}\}`
+6. Close the bead: `bd close \{\{taskId\}\} --db \{\{beadsDbPath\}\} --reason "..."`
 7. Document learnings in `.ralph-tui/progress.md`
 8. Signal completion
 
