fix: address PR feedback for multi-agent skills
- Make test resilient to CI environments without agents
- Add Factory Droid example to docs install commands

--- a/website/content/docs/getting-started/installation.mdx
+++ b/website/content/docs/getting-started/installation.mdx
@@ -191,6 +191,7 @@ ralph-tui skills install --force
 # Install to a specific agent only
 ralph-tui skills install --agent claude
 ralph-tui skills install --agent opencode
+ralph-tui skills install --agent droid
 
 # Install a specific skill
 ralph-tui skills install ralph-tui-prd
