test: add tests for subagent panel helpers and engine methods
- Add tests for getSubagentDetails, getSubagentOutput, getActiveSubagentId, getSubagentTree
- Add tests for SubagentTreePanel helper functions (status icons, duration formatting, truncation)
- Add tests for selection logic and tree navigation
- Update quick-start docs with new keyboard shortcuts and subagent panel info

--- a/website/content/docs/getting-started/quick-start.mdx
+++ b/website/content/docs/getting-started/quick-start.mdx
@@ -118,19 +118,38 @@ This approach lets you:
 
 While Ralph is running, use these keyboard shortcuts:
 
+### Execution Control
+
 | Key | Action |
 |-----|--------|
 | `s` | Start execution |
 | `p` | Pause/Resume execution |
-| `+` / `=` | Add 10 iterations (extends max iterations) |
-| `-` / `_` | Remove 10 iterations (minimum of current iteration or 1) |
-| `d` | Toggle progress dashboard |
-| `o` | Cycle right panel views (details → output → prompt) |
-| `O` | Jump directly to prompt preview |
-| `h` | Toggle show/hide closed tasks |
-| `r` | Refresh task list from tracker |
+| `+` / `=` | Add 10 iterations |
+| `-` / `_` | Remove 10 iterations |
 | `q` | Quit |
 | `?` | Show all shortcuts |
+
+### Navigation
+
+| Key | Action |
+|-----|--------|
+| `j` / `↓` | Navigate down (task list, iteration history, or subagent tree) |
+| `k` / `↑` | Navigate up |
+| `Tab` | Switch focus between panels (when subagent tree is visible) |
+| `Enter` | Drill into selected item |
+| `Esc` | Go back / close dialog |
+
+### View Controls
+
+| Key | Action |
+|-----|--------|
+| `o` | Cycle right panel views (details → output → prompt) |
+| `O` | Jump directly to prompt preview |
+| `d` | Toggle progress dashboard |
+| `h` | Toggle show/hide closed tasks |
+| `r` | Refresh task list from tracker |
+| `T` | Toggle subagent tree panel |
+| `t` | Cycle subagent detail level (minimal → moderate → detailed) |
 
 ## Understanding the TUI
 
@@ -141,11 +160,15 @@ The terminal interface shows:
   - **Details**: Task metadata (title, description, dependencies)
   - **Output**: Live agent stdout/stderr
   - **Prompt**: Preview of the rendered prompt being sent to the agent
+- **Subagent Tree Panel** (toggle with `T`): Shows AI agent's spawned subagents in a tree hierarchy
+  - Displays subagent type, description, status, and duration
+  - Use `Tab` to switch focus, then `j/k` to navigate and see subagent details
+  - Shows the task prompt given to each subagent and its result
 - **Header**: Current iteration count (e.g., `[3/10]`) and active task
 - **Footer**: Available keyboard shortcuts
 
 <Callout type="tip">
-Use `O` to preview the exact prompt being sent to your AI agent. This is helpful for debugging templates or understanding what context the agent receives.
+Use `O` to preview the exact prompt being sent to your AI agent. Press `T` to see the subagent tree - this shows what autonomous subtasks the AI is spawning to complete your work.
 </Callout>
 
 ## Next Steps
